menambahkan file gambar dan tambah list-content

--- a/detail.html
+++ b/detail.html
@@ -165,6 +165,42 @@
                     <div class="borrowbutton">                        
                         <a class="btn btn-warning" id="button_borrow" href="#">Borrow</a>
                     </div>
+
+                    <!--Adding list books-->
+                    <div class="d-flex justify-content-center">
+                      <div class="list-content">
+                        <div class="card" style="width: 18rem;">
+                          <img src="/assets/novel-dilan.jpg" class="card-img-top" alt="Dilan 1991">
+                          <div class="card-body">
+                            <h5 class="card-title">Dilan 1991</h5>
+                            <p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Obcaecati aspernatur enim ullam officia ... </p>
+                            <a href="#" class="btn btn-primary">Read More</a>
+                          </div>
+                        </div>
+                      </div>
+
+                      <div class="list-content">
+                        <div class="card" style="width: 18rem;">
+                          <img src="/assets/buku-seni-minimalis.jpg" class="card-img-top" alt="Dilan 1991">
+                          <div class="card-body">
+                            <h5 class="card-title">Seni Hidup Minimalis</h5>
+                            <p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Obcaecati aspernatur enim ullam officia ... </p>
+                            <a href="#" class="btn btn-primary">Read More</a>
+                          </div>
+                        </div>
+                      </div>
+
+                      <div class="list-content">
+                        <div class="card" style="width: 18rem;">
+                          <img src="/assets/novel-milea.jpg" class="card-img-top" alt="Milea">
+                          <div class="card-body">
+                            <h5 class="card-title">Milea</h5>
+                            <p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Obcaecati aspernatur enim ullam officia ... </p>
+                            <a href="#" class="btn btn-primary">Read More</a>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
                 </div>
             </section>
             <!-- /.content -->
