Slideshow Center and trying fix bug GitHubPages

--- a/detail.html
+++ b/detail.html
@@ -24,6 +24,7 @@
     <!-- Site wrapper -->
     <div class="wrapper">
 
+        <div w3-include-html="include_navbar.html"></div>
         <div w3-include-html="include_sidebar.html"></div>
 
         <!-- Content Wrapper. Contains page content -->
