--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
     <!-- Tell the browser to be responsive to screen width -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Font Awesome -->
-    <link rel="stylesheet" href="../../plugins/fontawesome-free/css/all.min.css">
+    <link rel="stylesheet" href="./plugins/fontawesome-free/css/all.min.css">
     <!-- Ionicons -->
     <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
     <!-- overlayScrollbars -->
-    <link rel="stylesheet" href="../../plugins/overlayScrollbars/css/OverlayScrollbars.min.css">
+    <link rel="stylesheet" href="./plugins/overlayScrollbars/css/OverlayScrollbars.min.css">
     <!-- Theme style -->
-    <link rel="stylesheet" href="../../dist/css/adminlte.min.css">
+    <link rel="stylesheet" href="./dist/css/adminlte.min.css">
     <!-- Google Font: Source Sans Pro -->
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700" rel="stylesheet">
 
@@ -129,15 +129,15 @@
     </div>
     <!-- ./wrapper -->
     <!-- jQuery -->
-    <script  type="text/javascript" src="../../plugins/jquery/jquery.min.js"></script>
+    <script  type="text/javascript" src="./plugins/jquery/jquery.min.js"></script>
     <!-- Bootstrap 4 -->
-    <script type="text/javascript" src="../../plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script type="text/javascript" src="./plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
     <!-- overlayScrollbars -->
-    <script type="text/javascript" src="../../plugins/overlayScrollbars/js/jquery.overlayScrollbars.min.js"></script>
+    <script type="text/javascript" src="./plugins/overlayScrollbars/js/jquery.overlayScrollbars.min.js"></script>
     <!-- AdminLTE App -->
-    <script type="text/javascript" src="../../dist/js/adminlte.min.js"></script>
+    <script type="text/javascript" src="./dist/js/adminlte.min.js"></script>
     <!-- AdminLTE for demo purposes -->
-    <script type="text/javascript" src="../../dist/js/demo.js"></script>
+    <script type="text/javascript" src="./dist/js/demo.js"></script>
 
     <!-- extra JS to include HTML -->
     <script src="js.js" type="text/javascript"></script>
