fix responsive auth page

--- a/auth/index.html
+++ b/auth/index.html
@@ -38,7 +38,7 @@
 
             <form action="#">
               <div class="container-form">
-                <div class="custom-form-group">
+                <div class="custom-form-group bottom-label">
                   <label for="exampleInputEmail1" class="label-login">Email address</label>
                   <input type="email" class="form-control custom-form" id="exampleInputEmail1"
                     placeholder="Enter email">
@@ -92,7 +92,7 @@
               <div class="container-btn">
                 <div class="row ">
                   <input name="signup" id="signup" class="btn signup-btn" type="button" value="Sign Up"  />
-                  <input name="login" id="login" class="btn login-btn" type="button" value="Login" onclick="displayLogIn()"/>                  
+                  <input name="login" id="login" class="btn login-btn" type="button" value="Login" onclick="displayLogIn()"/>
                 </div>
               </div>
             </form>
@@ -117,7 +117,7 @@
               <div class="container-btn">
                 <div class="row ">
                   <input name="submit" id="submit" class="btn submit-btn" type="button" value="Submit"/>
-                  <input name="login" id="login" class="btn login-btn" type="button" value="Back to Login" onclick="displayLogIn()"/>                  
+                  <input name="login" id="login" class="btn login-btn" type="button" value="Back to Login" onclick="displayLogIn()"/>
                 </div>
               </div>
             </form>
