--- a/index.html
+++ b/index.html
@@ -20,48 +20,8 @@
 
     <link rel="stylesheet" type="text/css" href="./plugins/slick/slick.css">
     <link rel="stylesheet" type="text/css" href="./plugins/slick/slick-theme.css">
-  <style type="text/css">
-    html, body {
-      margin: 0;
-      padding: 0;
-    }
+    <link rel="stylesheet" type="text/css" href="style.css">
 
-    * {
-      box-sizing: border-box;
-    }
-
-    .slider {
-        width: 50%;
-        margin: 100px auto;
-    }
-
-    .slick-slide {
-      margin: 0px 20px;
-    }
-
-    .slick-slide img {
-      width: 100%;
-    }
-
-    .slick-prev:before,
-    .slick-next:before {
-      color: black;
-    }
-
-
-    .slick-slide {
-      transition: all ease-in-out .3s;
-      opacity: .2;
-    }
-    
-    .slick-active {
-      opacity: .5;
-    }
-
-    .slick-current {
-      opacity: 1;
-    }
-  </style>
 </head>
 
 <body class="hold-transition sidebar-mini layout-fixed">
@@ -99,24 +59,141 @@
             <!-- /.modal -->
             <!-- Main content -->
             <section class="content">
-
                 <div class="container-fluid">
                     <div class="row">
                         <div class="col-12">
                             <section class="center slider">
                                 <div>
-                                  <img src="./assets/books/brief-answer-to-the-big-questions.jpg">
+                                    <img src="./assets/books/brief-answer-to-the-big-questions.jpg">
                                 </div>
                                 <div>
-                                  <img src="./assets/books/dilan.jpg">
+                                    <img src="./assets/books/dilan.jpg">
                                 </div>
                                 <div>
-                                  <img src="./assets/books/harry-potter.jpg">
+                                    <img src="./assets/books/harry-potter.jpg">
                                 </div>
                                 <div>
-                                  <img src="./assets/books/fantastic-beasts.jpg">
+                                    <img src="./assets/books/fantastic-beasts.jpg">
                                 </div>
-                              </section>
+                            </section>
+                        </div>
+                        <div class="col-12">
+                            <div>
+                                <div class="filter-container p-0 row">
+                                    <div class="filtr-item col-sm-4 list-book" data-category="1" data-sort="white sample">
+                                        <a href="detail.html">
+                                            <img src="./assets/books/brief-answer-to-the-big-questions.jpg"
+                                                class="img-fluid img-book" alt="white sample" />
+                                        </a>
+                                        <div class="list-book-detail" >
+                                            <div class="title-book" >
+                                                Brief Answer To The Big Question
+                                            </div>
+                                            <div class="desc-book" >
+                                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt, quisquam. Enim eos distinctio
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="filtr-item col-sm-4 list-book" data-category="1" data-sort="white sample">
+                                        <a href="detail.html">
+                                            <img src="./assets/books/dilan.jpg" class="img-fluid img-book"
+                                                alt="white sample" />
+                                        </a>
+                                        <div class="list-book-detail" >
+                                            <div class="title-book" >
+                                                Dilan
+                                            </div>
+                                            <div class="desc-book" >
+                                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt, quisquam. Enim eos distinctio 
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="filtr-item col-sm-4 list-book" data-category="1" data-sort="white sample">
+                                        <a href="detail.html">
+                                            <img src="./assets/books/harry-potter.jpg" class="img-fluid img-book"
+                                                alt="white sample" />
+                                        </a>
+                                        <div class="list-book-detail" >
+                                            <div class="title-book" >
+                                                Harry Potter
+                                            </div>
+                                            <div class="desc-book" >
+                                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt, quisquam. Enim eos distinctio 
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="filtr-item col-sm-4 list-book" data-category="1" data-sort="white sample">
+                                        <a href="detail.html">
+                                            <img src="./assets/books/fantastic-beasts.jpg" class="img-fluid img-book"
+                                                alt="white sample" />
+                                        </a>
+                                        <div class="list-book-detail" >
+                                            <div class="title-book" >
+                                                Fantastic Beasts
+                                            </div>
+                                            <div class="desc-book" >
+                                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt, quisquam. Enim eos distinctio 
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="filtr-item col-sm-4 list-book" data-category="1" data-sort="white sample">
+                                        <a href="detail.html">
+                                            <img src="./assets/books/brief-answer-to-the-big-questions.jpg"
+                                                class="img-fluid mb-2" alt="white sample" />
+                                        </a>
+                                        <div class="list-book-detail" >
+                                            <div class="title-book" >
+                                                Brief Answer To The Big Question
+                                            </div>
+                                            <div class="desc-book" >
+                                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt, quisquam. Enim eos distinctio
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="filtr-item col-sm-4 list-book" data-category="1" data-sort="white sample">
+                                        <a href="detail.html">
+                                            <img src="./assets/books/dilan.jpg" class="img-fluid img-book"
+                                                alt="white sample" />
+                                        </a>
+                                        <div class="list-book-detail" >
+                                            <div class="title-book" >
+                                                Dilan
+                                            </div>
+                                            <div class="desc-book" >
+                                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt, quisquam. Enim eos distinctio 
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="filtr-item col-sm-4 list-book" data-category="1" data-sort="white sample">
+                                        <a href="detail.html">
+                                            <img src="./assets/books/harry-potter.jpg" class="img-fluid img-book"
+                                                alt="white sample" />
+                                        </a>
+                                        <div class="list-book-detail" >
+                                            <div class="title-book" >
+                                                Harry Potter
+                                            </div>
+                                            <div class="desc-book" >
+                                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt, quisquam. Enim eos distinctio 
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="filtr-item col-sm-4 list-book" data-category="1" data-sort="white sample">
+                                        <a href="detail.html">
+                                            <img src="./assets/books/fantastic-beasts.jpg" class="img-fluid img-book"
+                                                alt="white sample" />
+                                        </a>
+                                        <div class="list-book-detail" >
+                                            <div class="title-book" >
+                                                Fantastic Beasts
+                                            </div>
+                                            <div class="desc-book" >
+                                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt, quisquam. Enim eos distinctio 
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -125,11 +202,10 @@
         </div>
         <!-- /.content-wrapper -->
         <div w3-include-html="include_footer.html"></div>
-
     </div>
     <!-- ./wrapper -->
     <!-- jQuery -->
-    <script  type="text/javascript" src="./plugins/jquery/jquery.min.js"></script>
+    <script type="text/javascript" src="./plugins/jquery/jquery.min.js"></script>
     <!-- Bootstrap 4 -->
     <script type="text/javascript" src="./plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
     <!-- overlayScrollbars -->
@@ -141,20 +217,25 @@
 
     <!-- extra JS to include HTML -->
     <script src="js.js" type="text/javascript"></script>
+    <script src="https://code.jquery.com/jquery-2.2.0.min.js" type="text/javascript"></script>
+    <script src="./plugins/slick/slick.js" type="text/javascript" charset="utf-8"></script>
+    
+    <script>
+        // slick slider
+        $(document).on('ready', function () {
+            $(".center").slick({
+                dots: true,
+                infinite: true,
+                centerMode: true,
+                slidesToShow: 1,
+                slidesToScroll: 3
+            });
+        });
+    </script>
 
-  <script src="https://code.jquery.com/jquery-2.2.0.min.js" type="text/javascript"></script>
-  <script src="./plugins/slick/slick.js" type="text/javascript" charset="utf-8"></script>
-  <script type="text/javascript">
-    $(document).on('ready', function() {
-      $(".center").slick({
-        dots: true,
-        infinite: true,
-        centerMode: true,
-        slidesToShow: 1,
-        slidesToScroll: 3
-      });
-    });
-</script>
+    <!-- Page specific script -->
+
+
 </body>
 
 </html>
