--- a/include_navbar.html
+++ b/include_navbar.html
@@ -75,7 +75,7 @@
                 </li>
             </ul>
             <!-- SEARCH FORM -->
-            <form class="form-inline ml-3">
+            <form id="search-books" class="form-inline ml-3">
                 <div class="input-group input-group-sm">
                     <input class="form-control form-control-navbar" type="search" placeholder="Search"
                         aria-label="Search">
