--- a/include_navbar.html
+++ b/include_navbar.html
@@ -1,11 +1,8 @@
-
+<link rel="stylesheet" type="text/css" href="style.css">
         <!-- Navbar -->
         <nav class="main-header navbar navbar-expand navbar-dark navbar-primary">
             <!-- Left navbar links -->
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link" data-widget="pushmenu" href="#" role="button"><i class="fas fa-bars"></i></a>
-                </li>
+            <ul class="navbar-nav">                
                 <li class="nav-item dropdown">
                     <a id="dropdownSubMenu1" href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" class="nav-link dropdown-toggle">All Categories</a>
                     <ul aria-labelledby="dropdownSubMenu1" class="dropdown-menu border-0 shadow" style="left: 0px; right: inherit;">
@@ -76,7 +73,7 @@
             </ul>
             <!-- SEARCH FORM -->
             <form class="form-inline ml-3">
-                <div class="input-group input-group-sm">
+                <div id="searchbar" class="input-group input-group-sm">
                     <input class="form-control form-control-navbar" type="search" placeholder="Search"
                         aria-label="Search">
                     <div class="input-group-append">
@@ -85,6 +82,7 @@
                         </button>
                     </div>
                 </div>
-            </form>
+            </form>             
+                <a id="toggle" class="nav-link" data-widget="pushmenu" href="#" role="button"><i class="fas fa-bars"></i></a>        
         </nav>
         <!-- /.navbar -->
