fix path detail.html

--- a/detail.html
+++ b/detail.html
@@ -10,13 +10,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" href="style.css">
   <!-- Font Awesome -->
-  <link rel="stylesheet" href="../../plugins/fontawesome-free/css/all.min.css">
+  <link rel="stylesheet" href="./plugins/fontawesome-free/css/all.min.css">
   <!-- Ionicons -->
   <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
   <!-- overlayScrollbars -->
-  <link rel="stylesheet" href="../../plugins/overlayScrollbars/css/OverlayScrollbars.min.css">
+  <link rel="stylesheet" href="./plugins/overlayScrollbars/css/OverlayScrollbars.min.css">
   <!-- Theme style -->
-  <link rel="stylesheet" href="../../dist/css/adminlte.min.css">
+  <link rel="stylesheet" href="./dist/css/adminlte.min.css">
   <!-- Google Font: Source Sans Pro -->
   <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700" rel="stylesheet">
 </head>
@@ -79,7 +79,7 @@
                 <span aria-hidden="true">×</span>
               </button>
             </div>
-            <div class="modal-body"><img class="check" src="assets/check.png"></div>
+            <div class="modal-body"><img class="check" src="./assets/check.png"></div>
             <p>Data has been deleted</p>
             <div class="modal-footer">
               <button class="btn btn-secondary" type="button" data-dismiss="modal">Close</button>
@@ -97,7 +97,7 @@
                 <span aria-hidden="true">×</span>
               </button>
             </div>
-            <div class="modal-body"><img class="check" src="assets/check.png"></div>
+            <div class="modal-body"><img class="check" src="./assets/check.png"></div>
             <p>Data already saved</p>
             <div class="modal-footer">
               <button class="btn btn-secondary" type="button" data-dismiss="modal">Close</button>
@@ -177,7 +177,7 @@
           <p>Novel</p>
         </div>
         <div class="container-fluid">
-          <img class="small-preview" src="assets/background.png">
+          <img class="small-preview" src="./assets/background.png">
 
           <div class="row">
             <div class="col-sm-6">
@@ -217,7 +217,7 @@
         <div class="row" id="recomended">
           <div class="col-sm-4">
             <div class="card" id="recomendedcard" style="width: 18rem;">
-              <img src="/assets/novel-dilan.jpg" class="card-img-top" alt="Dilan 1991">
+              <img src="./assets/novel-dilan.jpg" class="card-img-top" alt="Dilan 1991">
               <div class="card-body">
                 <h5 class="card-title">Dilan 1991</h5>
                 <p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Obcaecati aspernatur enim
@@ -229,7 +229,7 @@
 
           <div class="col-sm-4">
             <div class="card" id="recomendedcard" style="width: 18rem;">
-              <img src="/assets/buku-seni-minimalis.jpg" class="card-img-top" alt="Dilan 1991">
+              <img src="./assets/buku-seni-minimalis.jpg" class="card-img-top" alt="Dilan 1991">
               <div class="card-body">
                 <h5 class="card-title">Seni Hidup Minimalis</h5>
                 <p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Obcaecati aspernatur enim
@@ -241,7 +241,7 @@
 
           <div class="col-sm-4">
             <div class="card" id="recomendedcard" style="width: 18rem;">
-              <img src="/assets/novel-milea.jpg" class="card-img-top" alt="Milea">
+              <img src="./assets/novel-milea.jpg" class="card-img-top" alt="Milea">
               <div class="card-body">
                 <h5 class="card-title">Milea</h5>
                 <p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Obcaecati aspernatur enim
@@ -257,15 +257,15 @@
   </div>
   <!-- ./wrapper -->
   <!-- jQuery -->
-  <script src="../../plugins/jquery/jquery.min.js"></script>
+  <script src="./plugins/jquery/jquery.min.js"></script>
   <!-- Bootstrap 4 -->
-  <script src="../../plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="./plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
   <!-- overlayScrollbars -->
-  <script src="../../plugins/overlayScrollbars/js/jquery.overlayScrollbars.min.js"></script>
+  <script src="./plugins/overlayScrollbars/js/jquery.overlayScrollbars.min.js"></script>
   <!-- AdminLTE App -->
-  <script src="../../dist/js/adminlte.min.js"></script>
+  <script src="./dist/js/adminlte.min.js"></script>
   <!-- AdminLTE for demo purposes -->
-  <script src="../../dist/js/demo.js"></script>
+  <script src="./dist/js/demo.js"></script>
   <script>
     $(function () {
       $('.txtcomment').summernote();
