--- a/auth/index.html
+++ b/auth/index.html
@@ -57,7 +57,7 @@
               </div>
               <div class="container-btn">
                 <div class="row">
-                  <input name="login" id="login" class="btn login-btn" type="submit" value="Login" />
+                  <input name="login" id="login" class="btn login-btn" type="submit" value="Login" onclick="window.location.href='../index.html'"/>
                   <input name="signup" id="signup" class="btn signup-btn" type="button" value="Sign Up" onclick="displaySignUp()" />
                 </div>
               </div>
@@ -72,26 +72,26 @@
 
             <form role="form" id="formRegister">
               <div class="container-form">
-                  <div class="custom-form-group">
+                  <div class="form-group bottom-label">
                       <label for="inputUsername" class="label-login">Username</label>
-                      <input type="text" class="form-control custom-form" id="inputUsername" placeholder="Enter username" autocomplete="off">
+                      <input type="text" name="userName" class="form-control custom-form" id="inputUsername" placeholder="Enter username" autocomplete="off">
                     </div>
-                    <div class="custom-form-group">
+                    <div class="form-group bottom-label">
                       <label for="inputFullName" class="label-login">Full Name</label>
-                      <input type="text" class="form-control custom-form" id="inputFullName" placeholder="Enter full name" autocomplete="off">
+                      <input type="text" name="fullName" class="form-control custom-form" id="inputFullName" placeholder="Enter full name" autocomplete="off">
                     </div>
-                <div class="custom-form-group">
+                <div class="form-group bottom-label">
                   <label for="inputEmail" class="label-login">Email address</label>
-                  <input type="email" class="form-control custom-form" id="inputEmail" placeholder="Enter email" autocomplete="off">
+                  <input type="email" name="email" class="form-control custom-form" id="inputEmail" placeholder="Enter email" autocomplete="off">
                 </div>
-                <div class="custom-form-group bottom-label">
+                <div class="form-group bottom-label">
                   <label for="inputPassword" class="label-login">Password</label>
-                  <input type="password" class="form-control custom-form" id="inputPassword" placeholder="Password">
+                  <input type="password" name="password" class="form-control custom-form" id="exampleInputPassword" placeholder="Password">
                 </div>
               </div>
               <div class="container-btn">
                 <div class="row ">
-                  <input name="signup" id="signup" class="btn signup-btn" type="button" value="Sign Up"  />
+                  <input name="signup" id="signup" class="btn signup-btn" type="submit" value="Sign Up"  />
                   <input name="login" id="login" class="btn login-btn" type="button" value="Login" onclick="displayLogIn()"/>
                 </div>
               </div>
@@ -199,6 +199,62 @@
         },
         password: {
           required: "Please provide a password",
+        },
+        terms: "Please accept our terms"
+      },
+      errorElement: 'span',
+      errorPlacement: function (error, element) {
+        error.addClass('invalid-feedback');
+        element.closest('.form-group').append(error);
+      },
+      highlight: function (element, errorClass, validClass) {
+        $(element).addClass('is-invalid');
+      },
+      unhighlight: function (element, errorClass, validClass) {
+        $(element).removeClass('is-invalid');
+      }
+    });
+  });
+  </script>
+
+<script type="text/javascript">
+  $(document).ready(function () {
+    $.validator.setDefaults({
+      submitHandler: function () {
+        alert( "Form successful submitted!" );
+      }
+    });
+    $('#formRegister').validate({
+      rules: {
+        userName: {
+          required: true
+        },
+        fullName: {
+          required: true
+        },
+        email: {
+          required: true,
+          email: true,
+        },
+        password: {
+          required: true,
+          minlength: 8
+        },
+        terms: {
+          required: true
+        },
+      },
+      messages: {
+        userName: {
+          required: "Please enter your username",
+        },
+        email: {
+          required: "Please enter a email address",
+          email: "Please enter a valid email address"
+        },
+        password: {
+          required: "Please provide a password",
+          minlength: "Your password must be at least 8 characters long"
         },
         terms: "Please accept our terms"
       },
