--- a/auth/index.html
+++ b/auth/index.html
@@ -57,7 +57,7 @@
               </div>
               <div class="container-btn">
                 <div class="row">
-                  <input name="login" id="login" class="btn login-btn" type="submit" value="Login" onclick="window.location.href='../index.html'"/>
+                  <input name="login" id="login" class="btn login-btn" type="submit" value="Login" />
                   <input name="signup" id="signup" class="btn signup-btn" type="button" value="Sign Up" onclick="displaySignUp()" />
                 </div>
               </div>
@@ -103,20 +103,20 @@
             <h1 class="form-title">Forgot Password</h1>
             <p class="form-subtitle">Forgot your password? Don't worry, we got you covered.</p>
 
-            <form action="#">
+            <form action="#" id="formForgot">
               <div class="container-form">
-                  <div class="custom-form-group">
+                  <div class="form-group bottom-label">
                       <label for="inputUsername" class="label-login">Username</label>
-                      <input type="text" class="form-control custom-form" id="inputUsername" placeholder="Enter username" autocomplete="off">
+                      <input type="text" name="userName" class="form-control custom-form" id="inputUsername" placeholder="Enter username" autocomplete="off">
                     </div>
-                <div class="custom-form-group bottom-label">
+                <div class="form-group bottom-label">
                   <label for="inputEmail" class="label-login">Email address</label>
-                  <input type="email" class="form-control custom-form" id="inputEmail" placeholder="Enter email" autocomplete="off">
+                  <input type="email" name="email" class="form-control custom-form" id="inputEmail" placeholder="Enter email" autocomplete="off">
                 </div>
               </div>
               <div class="container-btn">
                 <div class="row ">
-                  <input name="submit" id="submit" class="btn submit-btn" type="button" value="Submit"/>
+                  <input name="submit" id="submit" class="btn submit-btn" type="submit" value="Submit"/>
                   <input name="login" id="login" class="btn login-btn" type="button" value="Back to Login" onclick="displayLogIn()"/>
                 </div>
               </div>
@@ -176,7 +176,7 @@
   $(document).ready(function () {
     $.validator.setDefaults({
       submitHandler: function () {
-        alert( "Form successful submitted!" );
+        window.location.href = "../index.html";
       }
     });
     $('#loginForm').validate({
@@ -188,9 +188,6 @@
         password: {
           required: true,
         },
-        terms: {
-          required: true
-        },
       },
       messages: {
         email: {
@@ -200,7 +197,6 @@
         password: {
           required: "Please provide a password",
         },
-        terms: "Please accept our terms"
       },
       errorElement: 'span',
       errorPlacement: function (error, element) {
@@ -221,7 +217,8 @@
   $(document).ready(function () {
     $.validator.setDefaults({
       submitHandler: function () {
-        alert( "Form successful submitted!" );
+        alert( "Registration Complete!" );
+        window.location.href="../index.html";
       }
     });
     $('#formRegister').validate({
@@ -240,9 +237,6 @@
           required: true,
           minlength: 8
         },
-        terms: {
-          required: true
-        },
       },
       messages: {
         userName: {
@@ -256,7 +250,48 @@
           required: "Please provide a password",
           minlength: "Your password must be at least 8 characters long"
         },
-        terms: "Please accept our terms"
+      },
+      errorElement: 'span',
+      errorPlacement: function (error, element) {
+        error.addClass('invalid-feedback');
+        element.closest('.form-group').append(error);
+      },
+      highlight: function (element, errorClass, validClass) {
+        $(element).addClass('is-invalid');
+      },
+      unhighlight: function (element, errorClass, validClass) {
+        $(element).removeClass('is-invalid');
+      }
+    });
+  });
+  </script>
+
+<script type="text/javascript">
+  $(document).ready(function () {
+    $.validator.setDefaults({
+      submitHandler: function () {
+        alert( "Check your email!" );
+        displayLogIn();
+      }
+    });
+    $('#formForgot').validate({
+      rules: {
+        userName: {
+          required: true
+        },
+        email: {
+          required: true,
+          email: true,
+        },
+      },
+      messages: {
+        userName: {
+          required: "Please enter your username",
+        },
+        email: {
+          required: "Please enter a email address",
+          email: "Please enter a valid email address"
+        },
       },
       errorElement: 'span',
       errorPlacement: function (error, element) {
