--- a/detail.html
+++ b/detail.html
@@ -219,8 +219,8 @@
         </div>
         <div class="row" id="recomended">
           <div class="col-sm-4">
-            <div class="card" id="recomendedcard" style="width: 18rem;">
-              <img src="/assets/novel-dilan.jpg" class="card-img-top" alt="Dilan 1991">
+            <div class="card" id="recomendedcard" >
+              <img src="/assets/novel-dilan.jpg"  alt="Dilan 1991">
               <div class="card-body">
                 <h5 class="card-title">Dilan 1991</h5>
                 <p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Obcaecati aspernatur enim
@@ -231,8 +231,8 @@
           </div>
 
           <div class="col-sm-4">
-            <div class="card" id="recomendedcard" style="width: 18rem;">
-              <img src="/assets/buku-seni-minimalis.jpg" class="card-img-top" alt="Dilan 1991">
+            <div class="card" id="recomendedcard" >
+              <img src="/assets/buku-seni-minimalis.jpg" alt="Dilan 1991">
               <div class="card-body">
                 <h5 class="card-title">Seni Hidup Minimalis</h5>
                 <p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Obcaecati aspernatur enim
@@ -243,8 +243,8 @@
           </div>
 
           <div class="col-sm-4">
-            <div class="card" id="recomendedcard" style="width: 18rem;">
-              <img src="/assets/novel-milea.jpg" class="card-img-top" alt="Milea">
+            <div class="card" id="recomendedcard" >
+              <img src="/assets/novel-milea.jpg"  alt="Milea">
               <div class="card-body">
                 <h5 class="card-title">Milea</h5>
                 <p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Obcaecati aspernatur enim
@@ -269,11 +269,6 @@
   <script src="../../dist/js/adminlte.min.js"></script>
   <!-- AdminLTE for demo purposes -->
   <script src="../../dist/js/demo.js"></script>
-  <script>
-    $(function () {
-      $('.txtcomment').summernote();
-    })   
-  </script>
   <script src="js.js" type="text/javascript"></script>
 
 </body>
