--- a/include_navbar.html
+++ b/include_navbar.html
@@ -82,7 +82,7 @@
     <!-- SEARCH FORM -->
     <form  id="search-books"  class="form-inline ml-3">
         <div id="searchbar" class="input-group input-group-sm">
-            <input class="form-control form-control-navbar" type="search" placeholder="Search" aria-label="Search">
+            <input id="search" class="form-control form-control-navbar searchbar" value="test" type="text" placeholder="Search" aria-label="Search">
             <div class="input-group-append">
                 <button class="btn btn-navbar" type="submit">
                     <i class="fas fa-search"></i>
